--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.0",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
@@ -56,6 +55,7 @@
     "react-resizable-panels": "^2.1.9",
     "react-whatsapp-widget": "^2.2.0",
     "recharts": "2.15.0",
+    "resend": "^4.5.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -66,10 +66,9 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
-    "@types/nodemailer": "^6.4.15",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
 }
