--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-email/components": "0.0.38",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,6 +69,7 @@
     "@types/react-dom": "^19.1.3",
     "postcss": "^8.5.3",
     "prettier": "^3.3.3",
+    "react-email": "^4.0.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
